--- a/package.json
+++ b/package.json
@@ -24,8 +24,10 @@
   },
   "homepage": "https://github.com/Kara-Bot/Kara-Bot#readme",
   "dependencies": {
+    "body-parser": "^1.15.0",
     "botkit": "^0.1.1",
-    "dotenv": "^2.0.0"
+    "dotenv": "^2.0.0",
+    "express": "^4.13.4"
   },
   "devDependencies": {
     "eslint": "^2.9.0",
