--- a/package.json
+++ b/package.json
@@ -37,6 +37,8 @@
     "eslint-plugin-import": "^1.6.1",
     "chai": "^3.5.0",
     "chai-http": "^2.0.1",
-    "mocha": "^2.4.5"
+    "mocha": "^2.4.5",
+    "jira-connector": "^2.3.0",
+    "unirest": "^0.4.2"
   }
 }
