--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "body-parser": "^1.15.0",
     "botkit": "^0.1.1",
     "dotenv": "^2.0.0",
-    "express": "^4.13.4"
+    "express": "^4.13.4",
+    "request": "^2.72.0"
   },
   "devDependencies": {
     "eslint": "^2.9.0",
