--- a/package.json
+++ b/package.json
@@ -36,8 +36,6 @@
     "eslint-plugin-import": "^1.6.1",
     "chai": "^3.5.0",
     "chai-http": "^2.0.1",
-    "mocha": "^2.4.5",
-    "localtunnel": "^1.8.1",
-    "morgan": "^1.7.0"
+    "mocha": "^2.4.5"
   }
 }
