--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "botkit": "^0.1.1",
     "dotenv": "^2.0.0",
     "express": "^4.13.4",
+    "github": "^0.2.4",
     "request": "^2.72.0"
   },
   "devDependencies": {
