--- a/package.json
+++ b/package.json
@@ -29,7 +29,9 @@
     "dotenv": "^2.0.0",
     "express": "^4.13.4",
     "github": "^0.2.4",
-    "request": "^2.72.0"
+    "request": "^2.72.0",
+    "jira-connector": "^2.3.0",
+    "unirest": "^0.4.2"
 
   },
   "devDependencies": {
@@ -38,8 +40,6 @@
     "eslint-plugin-import": "^1.6.1",
     "chai": "^3.5.0",
     "chai-http": "^2.0.1",
-    "mocha": "^2.4.5",
-    "jira-connector": "^2.3.0",
-    "unirest": "^0.4.2"
+    "mocha": "^2.4.5"
   }
 }
