(feat) Add script to package.json for building index_bundle

--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "start": "nodemon server.js",
     "test": "mocha ./spec/karabot.js",
-    "webpack": "node ./node_modules/webpack-dev-server/bin/webpack-dev-server.js"
+    "webpack": "node ./node_modules/webpack-dev-server/bin/webpack-dev-server.js",
+    "production": "webpack -p"
   },
   "repository": {
     "type": "git",
