--- a/package.json
+++ b/package.json
@@ -26,18 +26,17 @@
   },
   "homepage": "https://github.com/Kara-Bot/Kara-Bot#readme",
   "dependencies": {
+    "axios": "^0.11.0",
+    "babel-preset-stage-1": "^6.1.18",
     "body-parser": "^1.15.0",
     "botkit": "^0.1.1",
     "dotenv": "^2.0.0",
     "express": "^4.13.4",
+    "express-jwt": "^3.4.0",
     "github": "^0.2.4",
-    "request": "^2.72.0",
-    "jira-connector": "^2.3.0",
-    "unirest": "^0.4.2",
     "google-auth-library": "^0.9.7",
     "googleapis": "^5.2.1",
-    "axios": "^0.11.0",
-    "babel-preset-stage-1": "^6.1.18",
+    "jira-connector": "^2.3.0",
     "lodash": "^3.10.1",
     "react": "^0.14.3",
     "react-dom": "^0.14.3",
@@ -45,7 +44,9 @@
     "react-router": "^2.0.0-rc5",
     "redux": "^3.0.4",
     "redux-form": "^4.1.3",
-    "redux-promise": "^0.5.3"
+    "redux-promise": "^0.5.3",
+    "request": "^2.72.0",
+    "unirest": "^0.4.2"
   },
   "devDependencies": {
     "eslint": "^2.9.0",
