--- a/package.json
+++ b/package.json
@@ -54,7 +54,8 @@
     "redux-promise": "^0.5.3",
     "request": "^2.72.0",
     "unirest": "^0.4.2",
-    "webpack": "^1.12.9"
+    "webpack": "^1.12.9",
+    "watson-developer-cloud": "^1.5.0"
   },
   "devDependencies": {
     "eslint": "^2.9.0",
