--- a/package.json
+++ b/package.json
@@ -29,6 +29,10 @@
   "dependencies": {
     "axios": "^0.11.0",
     "babel-preset-stage-1": "^6.1.18",
+    "babel-core": "^6.2.1",
+    "babel-loader": "^6.2.0",
+    "babel-preset-es2015": "^6.1.18",
+    "babel-preset-react": "^6.1.18",
     "body-parser": "^1.15.0",
     "botkit": "^0.1.1",
     "dotenv": "^2.0.0",
@@ -38,6 +42,7 @@
     "google-auth-library": "^0.9.7",
     "googleapis": "^5.2.1",
     "jira-connector": "^2.3.0",
+    "jquery": "^2.2.1",
     "lodash": "^3.10.1",
     "pg": "^4.5.5",
     "react": "^0.14.3",
@@ -48,7 +53,8 @@
     "redux-form": "^4.1.3",
     "redux-promise": "^0.5.3",
     "request": "^2.72.0",
-    "unirest": "^0.4.2"
+    "unirest": "^0.4.2",
+    "webpack": "^1.12.9"
   },
   "devDependencies": {
     "eslint": "^2.9.0",
@@ -57,15 +63,9 @@
     "chai": "^3.5.0",
     "chai-http": "^2.0.1",
     "mocha": "^2.4.5",
-    "babel-core": "^6.2.1",
-    "babel-loader": "^6.2.0",
-    "babel-preset-es2015": "^6.1.18",
-    "babel-preset-react": "^6.1.18",
     "chai-jquery": "^2.0.0",
-    "jquery": "^2.2.1",
     "jsdom": "^8.1.0",
     "react-addons-test-utils": "^0.14.7",
-    "webpack": "^1.12.9",
     "webpack-dev-server": "^1.14.0"
   }
 }
