--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "nodemon server.js",
     "test": "mocha ./spec/karabot.js",
     "webpack": "node ./node_modules/webpack-dev-server/bin/webpack-dev-server.js",
-    "production": "webpack -p; node server.js",
+    "production": "webpack -p; nodemon server.js",
     "heroku-postbuild": "webpack -p"
   },
   "repository": {
@@ -28,11 +28,11 @@
   "homepage": "https://github.com/Kara-Bot/Kara-Bot#readme",
   "dependencies": {
     "axios": "^0.11.0",
-    "babel-preset-stage-1": "^6.1.18",
     "babel-core": "^6.2.1",
     "babel-loader": "^6.2.0",
     "babel-preset-es2015": "^6.1.18",
     "babel-preset-react": "^6.1.18",
+    "babel-preset-stage-1": "^6.1.18",
     "body-parser": "^1.15.0",
     "botkit": "^0.1.1",
     "dotenv": "^2.0.0",
@@ -46,6 +46,8 @@
     "lodash": "^3.10.1",
     "pg": "^4.5.5",
     "react": "^0.14.3",
+    "react-bootstrap": "^0.29.4",
+    "react-bootstrap-table": "^2.3.1",
     "react-dom": "^0.14.3",
     "react-redux": "^4.0.0",
     "react-router": "^2.0.0-rc5",
@@ -54,8 +56,8 @@
     "redux-promise": "^0.5.3",
     "request": "^2.72.0",
     "unirest": "^0.4.2",
-    "webpack": "^1.12.9",
-    "watson-developer-cloud": "^1.5.0"
+    "watson-developer-cloud": "^1.5.0",
+    "webpack": "^1.12.9"
   },
   "devDependencies": {
     "eslint": "^2.9.0",
