--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "jquery": "^2.2.1",
     "lodash": "^3.10.1",
     "pg": "^4.5.5",
+    "quiche": "0.0.10",
     "react": "^0.14.3",
     "react-bootstrap": "^0.29.4",
     "react-bootstrap-table": "^2.3.1",
