--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "babel-preset-stage-1": "^6.1.18",
     "body-parser": "^1.15.0",
     "botkit": "^0.1.1",
+    "d3": "^3.5.17",
     "dotenv": "^2.0.0",
     "express": "^4.13.4",
     "express-jwt": "^3.4.0",
@@ -51,6 +52,7 @@
     "react-bootstrap": "^0.29.4",
     "react-bootstrap-table": "^2.3.1",
     "react-dom": "^0.14.3",
+    "react-faux-dom": "^2.5.0",
     "react-redux": "^4.0.0",
     "react-router": "^2.0.0-rc5",
     "redux": "^3.0.4",
