--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "start": "nodemon server.js",
     "test": "mocha ./spec/karabot.js",
     "webpack": "node ./node_modules/webpack-dev-server/bin/webpack-dev-server.js",
-    "production": "webpack -p; nodemon server.js",
-    "heroku-postbuild": "webpack -p"
+    "production": "webpack; nodemon server.js",
+    "heroku-postbuild": "webpack"
   },
   "repository": {
     "type": "git",
@@ -56,6 +56,7 @@
     "redux-form": "^4.1.3",
     "redux-promise": "^0.5.3",
     "request": "^2.72.0",
+    "uglify-js": "^2.6.2",
     "unirest": "^0.4.2",
     "watson-developer-cloud": "^1.5.0",
     "webpack": "^1.12.9"
